@@ -1,3 +1,8 @@
+2013-07-02  tasogare66 <tasogare66@gmail.com>
+
+	* red-rogue-cs:
+	HiddenIntを追加
+
 2013-06-30  tasogare66 <tasogare66@gmail.com>
 
 	* red-rogue-cs:
